--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <title>Library</title>
 </head>
 <body>
-    
+    <div class="header">
+        <h1>Library</h1>
+    </div>
+    <main class="content">
+
+    </main>
+    <div class="footer">
+
+    </div>
 </body>
 </html>
