change div to footer

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <main class="content">
 
     </main>
-    <div class="footer">
+    <footer class="footer">
 
-    </div>
+    </footer>
 </body>
 </html>
