add dummy content to footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
     </main>
     <footer class="footer">
-
+        <p>Created by Brendan Lai</p>
+        <p>Github: <a href="https://github.com/brendanlai01">brendanlai01</a></p>
     </footer>
 </body>
 <script src="script.js"></script>
