create dummy book list with card

--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
         <h1>Library</h1>
     </div>
     <main class="content">
-
+        <ul class="book-list">
+            <li class="book">
+                <h4>Title:</h4> 
+                <p>1984</p>
+                <h4>Author:</h4> 
+                <p>George Orwell</p>
+                <h4>Pages:</h4> 
+                <p>328</p>
+                <h4>Completion Status:</h4> 
+                <p>Read</p>
+            </li>
+        </ul>
     </main>
     <footer class="footer">
         <p>Created by Brendan Lai</p>
