--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Library</h1>
+        <h1 class="logo">Library</h1>
     </div>
     <main class="content">
         <ul class="book-list">
