add center-align to header and footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Library</title>
 </head>
 <body>
-    <div class="header">
+    <div class="header center-align">
         <h1 class="logo">Library</h1>
     </div>
     <main class="content">
@@ -27,7 +27,7 @@
             </li>
         </ul>
     </main>
-    <footer class="footer">
+    <footer class="footer center-align">
         <p>Created by Brendan Lai</p>
         <p>Github: <a href="https://github.com/brendanlai01">brendanlai01</a></p>
     </footer>
