add id's to book children

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <ul class="book-list">
             <li class="book">
                 <h4>Title:</h4> 
-                <p>1984</p>
+                <p id="title">1984</p>
                 <h4>Author:</h4> 
-                <p>George Orwell</p>
+                <p id="author">George Orwell</p>
                 <h4>Pages:</h4> 
-                <p>328</p>
+                <p id="pages">328</p>
                 <h4>Completion Status:</h4> 
-                <p>Read</p>
+                <p id="completion">Read</p>
             </li>
         </ul>
     </main>
