add plus button to list

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                 <h4>Completion Status:</h4> 
                 <p id="completion">Read</p>
             </li>
+            <li id="add-button">
+                <button>
+                    <img src="icons/plus.svg" alt="add button">
+                </button>
+            </li>
         </ul>
     </main>
     <footer class="footer center-align">
