--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <main class="content">
         <ul class="book-list">
-            <li class="book">
+            <li class="book hidden">
                 <h4>Title:</h4> 
                 <p id="title">1984</p>
                 <h4>Author:</h4> 
