--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <h4>Completion Status:</h4> 
                 <p id="completion">Read</p>
             </li>
-            <li id="add-button">
-                <button>
+            <li class="add">
+                <button id="add-button">
                     <img src="icons/plus.svg" alt="add button">
                 </button>
             </li>
