add center-align class to book-list

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="logo">Library</h1>
     </div>
     <main class="content">
-        <ul class="book-list">
+        <ul class="book-list center-align">
             <li class="book hidden">
                 <h4>Title:</h4> 
                 <p id="title">1984</p>
