--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
                 </button>
             </li>
         </ul>
+
+        <dialog class="book-modal" open>
+            <form>
+                <label for="form-title"><h3>Title:</h3></label>
+                <input type="text" id="form-title" name="form-title">
+                <label for="form-author"><h3>Author:</h3></label>
+                <input type="text" id="form-author" name="form-author">
+                <label for="form-pages"><h3>Pages:</h3></label>
+                <input type="text" id="form-pages" name="form-pages">
+                <label for="form-read"><h3>Read or Not:</h3></label>
+                <input type="checkbox" id="form-read" name="form-read">
+            </form>
+        </dialog>
     </main>
     <footer class="footer center-align">
         <p>Created by Brendan Lai</p>
