change text to number for form-pages

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                 </button>
             </li>
         </ul>
-
         <dialog class="book-modal" open>
             <form>
                 <label for="form-title"><h3>Title:</h3></label>
@@ -39,7 +38,7 @@
                 <label for="form-author"><h3>Author:</h3></label>
                 <input type="text" id="form-author" name="form-author">
                 <label for="form-pages"><h3>Pages:</h3></label>
-                <input type="text" id="form-pages" name="form-pages">
+                <input type="number" id="form-pages" name="form-pages">
                 <label for="form-read"><h3>Read or Not:</h3></label>
                 <input type="checkbox" id="form-read" name="form-read">
             </form>
