create buttons for book-modal

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                 <input type="number" id="form-pages" name="form-pages">
                 <label for="form-read"><h3>Read or Not:</h3></label>
                 <input type="checkbox" id="form-read" name="form-read">
+                <div class="form-buttons">
+                    <button id="add-book">Add Book</button>
+                    <button id="close">Close</button>
+                </div>
             </form>
         </dialog>
     </main>
