--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </button>
             </li>
         </ul>
-        <dialog class="book-modal" open>
+        <dialog class="book-modal">
             <form>
                 <label for="form-title"><h3>Title:</h3></label>
                 <input type="text" id="form-title" name="form-title">
