add type button to add book button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <label for="read"><h3>Read or Not:</h3></label>
                 <input type="checkbox" id="read" name="read">
                 <div class="form-buttons">
-                    <button id="add-book">Add Book</button>
+                    <button id="add-book" type="button">Add Book</button>
                     <button id="close" type="button">Close</button>
                 </div>
             </form>
