--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                 <p class="pages">328</p>
                 <h4>Completion Status:</h4> 
                 <p class="completion">Read</p>
+                <button></button>
+                <button></button>
+                <button onclick="removeBook(this)" class="remove white">
+                    <img src="icons/trash-can.svg" alt="">
+                </button>
             </li>
             <li class="add">
                 <button id="add-button">
