--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
                 <p class="pages">328</p>
                 <h4>Completion Status:</h4> 
                 <p class="completion">Read</p>
-                <button></button>
-                <button></button>
-                <button onclick="removeBook(this)" class="remove white">
-                    <img src="icons/trash-can.svg" alt="">
-                </button>
+                <div class="book-buttons">
+                    <button class="white">
+                        <img src="icons/check-circle.svg" alt="">
+                    </button>
+                    <button onclick="removeBook(this)" class="white">
+                        <img src="icons/trash-can.svg" alt="">
+                    </button>
+                </div>
             </li>
             <li class="add">
                 <button id="add-button">
