add change-button class

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h4>Completion Status:</h4> 
                 <p class="completion">Read</p>
                 <div class="book-buttons">
-                    <button class="white">
+                    <button onclick="changeRead(this)" class="change-button white">
                         <img src="icons/check-circle.svg" alt="">
                     </button>
                     <button onclick="removeBook(this)" class="white">
